# go-server/docs/swagger.json
@@ -1212,6 +1212,18 @@
                         "name": "end_date",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "check_number",
+                        "name": "check_number",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "upc",
+                        "name": "upc",
+                        "in": "query"
                     }
                 ],
                 "responses": {
