# go-server/internal/repositories/sale.go
@@ -10,7 +10,7 @@ import (
 )
 
 type SaleRepository interface {
-	GetAllSalesWithinDate(ctx context.Context, startDate, endDate time.Time, lastCheckNumber string) ([]generated.Sale, error)
+	GetAllSalesWithinDate(ctx context.Context, startDate, endDate time.Time, lastCheckNumber, lastUPC string) ([]generated.Sale, error)
 }
 
 type saleRepository struct {
@@ -28,15 +28,16 @@ func NewSaleRepository(db *sqlx.DB) SaleRepository {
 func (s *saleRepository) GetAllSalesWithinDate(
 	ctx context.Context,
 	startDate, endDate time.Time,
-	lastCheckNumber string,
+	lastCheckNumber, lastUPC string,
 ) ([]generated.Sale, error) {
 	ctx, cancel := context.WithTimeout(ctx, constants.DatabaseTimeOut)
 	defer cancel()
 
 	return s.queries.GetSalesWithinDate(ctx, generated.GetSalesWithinDateParams{
-		PrintDate:   startDate,
-		PrintDate_2: endDate,
-		CheckNumber: lastCheckNumber,
-		Limit:       constants.PaginationStep,
+		PrintDate:     startDate,
+		PrintDate_2:   endDate,
+		CheckNumber:   lastCheckNumber,
+		CheckNumber_2: lastUPC,
+		Limit:         constants.PaginationStep,
 	})
 }
